Fix double scroll issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -169,12 +169,11 @@ body,
 body {
   background-color: theme("colors.background");
   color: white;
-  height: 100vh;
 }
 
 #scroll-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   @apply overflow-y-auto;
 }
 
